# agents-grocery

./: .gitignore  Dockerfile  README.md  README_en.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
agents/: Dockerfile  requirements.txt
agents/app/: __init__.py  errors.py  middlewares.py
agents/app/models/: chat.py  test.py
agents/app/routers/: agents.py  chat.py  test.py
agents/config/: __init__.py  config.prd.yaml
agents/playground/chore_add-tests-for-common-utils/: verify_tests.py
app/: __init__.py  main.py  middlewares.py
app/models/: base.py
app/routers/: healthcheck.py
config/: __init__.py  config.prd.yaml  service.dev.yaml
playground/: test_requests.ipynb
sbin/: run.sh  stop.sh
setup/: Dockerfile  requirements.txt
setup/config/: __init__.py
setup/mappings/: ilm_policy.yaml
setup/sql/: clean.sql  create_role.sql  update_config_table.sql
setup/src/: clean.py  initialize.py
src/agents/: base_agent.py  client_agent.py  qa_agent.py
src/common/: global_settings.py  inference.py  loader.py  logger.py  request_utils.py  timer.py  utils.py
tests/: test_depth_logging.py  test_loader.py  test_logger.py  test_request_utils.py  test_timer.py  test_utils.py
view/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
view/app/: main.py  ui_manager.py
view/config/: __init__.py  config.dev.yaml  config.prd.yaml
view/src/common/: depth_logging.py  inference.py  loader.py  logger.py  request_utils.py  timer.py  utils.py
(+18 files in other folders)
